<resources>
    <string name="app_name">PunchedCard</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="request_error">请求错误！</string>
    <string name="data_error">数据错误！</string>
    <!--Main page-->
    <string name="main_top_bar_school_name">西安诺曼科技幼儿园</string>
    <string name="main_teacher_sign_button">老\n师\n签\n到</string>
    <string name="main_bottom_copyright">诺曼科技</string>

    <!--input car number-->
    <string name="input_car_hint">请您输入卡号</string>
    <!--admin-->
    <string name="admin_button_back_main_page">返回主页</string>
    <string name="admin_button_check_update">检查版本更新</string>
    <string name="admin_button_reset">恢复出厂设置</string>
    <string name="admin_button_exit">退出</string>
    <!--punch-->
    <string name="school_punch_card_grad">年\u0020\u0020\u0020\u0020\u0020\u0020\u0020级：</string>
    <string name="school_punch_card_class">班\u0020\u0020\u0020\u0020\u0020\u0020\u0020级：</string>
    <string name="school_punch_card_parent">监\u0020\u0020护\u0020\u0020人：</string>
    <string name="teacher_punch_card_num">卡\u0020\u0020\u0020\u0020\u0020\u0020\u0020号：</string>
    <string name="teacher_punch_time">签到时间：</string>
    <string name="init_person_info">人员信息初始化完成！</string>


</resources>
