<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <include layout="@layout/top_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/back_main_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_btn_click"
            android:gravity="center"
            android:text="@string/admin_button_back_main_page"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/admin_check_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn_click"
            android:gravity="center"
            android:text="@string/admin_button_check_update"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/admin_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn_click"
            android:gravity="center"
            android:text="@string/admin_button_reset"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/admin_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn_click"
            android:gravity="center"
            android:text="@string/admin_button_exit"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
