<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_main_top_high"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/school_name"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:text="@string/main_top_bar_school_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2015年04月11日   13:44   星期一"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"  />
    </RelativeLayout>

    <ImageView
        android:id="@+id/top_line"
        android:layout_below="@id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/line"/>
    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_centerInParent="true"
        android:layout_height="320dp"
        >

        <com.nuoman.widget.ViewFlow
            android:id="@+id/view_flow"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </com.nuoman.widget.ViewFlow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#88252525"
            android:gravity="center"
            android:padding="3dip" >

            <com.nuoman.widget.CircleFlowIndicator
                android:id="@+id/view_flow_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:padding="2dip"
                app:activeColor="#ff0000"
                app:activeType="fill"
                app:circleSeparation="20dip"
                app:inactiveColor="#ffffff"
                app:inactiveType="fill"
                app:radius="4dip" />
        </LinearLayout>
    </FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/teacher_sign"
        android:layout_alignParentBottom="true"
        android:text="@string/main_teacher_sign_button"
        android:layout_marginBottom="40dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingRight="10dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:text="@string/main_bottom_copyright"/>
</RelativeLayout>
